comandos de migration

--- a/bio/appsettings.json
+++ b/bio/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=RYURYUKFYUKDGHN\\MSSQLSERVER01;Database=redesocial;trusted_connection=true;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
